inventorymaker/style/workspace.css
/* Workspace */
main {
    display: inline-block;
    background-color: var(--workspace-bg);

    width: calc(100% - (2 * var(--sidebar-width)));
    height: calc(100vh - var(--header-height));
    padding: 16px;
}

main > h3 {
    text-align: center;
}

/* Inventory table */
#workspace {
    display: block;
    width: 90%;
    margin: 1vw auto;
}

#workspace table {

    width: 100%;
    background-color: #cccccc;
    padding: 0 .8vw .8vw;

    border-spacing: 0;

    border-left: .35vw solid #fff;
    border-bottom: .35vw solid #555555;
    border-right: .35vw solid #555555;
}

#workspace #inventory-outliner {
    border: .35vw solid #000;
}

#workspace #title-display {

    width: 100%;

    font-size: 2.7vw;
    font-weight: 100;

    padding: 1vw;

    background-color: #cccccc;
    border: none;
    border-top: .35vw solid #fff;
    border-left: .35vw solid #fff;
    border-right: .35vw solid #555555;
    outline: none;
}

#workspace td::after {
    content: '';
    display: block;
    margin-top: 100%;
}

.cell-content {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

#workspace td {

    position: relative;
    width: 11.11%;

    background-color: #8b8b8b;
    cursor: pointer;

    /* Shadow */
    border-top: .35vw solid #373737;
    border-left: .35vw solid #373737;

    /* Light */
    border-bottom: .35vw solid #fff;
    border-right: .35vw solid #fff;
}

#workspace td img {
    width: 100%;
    height: 100%;
}

#workspace td:hover {
    background-color: #dbdbdb;
}

#workspace td img:hover {
    filter: opacity(50%);
}

#item-tooltip {
    z-index: 100;
    position: absolute;
    padding: 0 8px;
    background-color: #000;
    border: .25vw solid #2a0d74;
    outline: .25vw solid #000;
}

#item-tooltip p {
    font-family: 'minecraftia-regular', sans-serif;
    font-weight: 100;
    margin: .35vw 0;
}

